<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/deepskyblue"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:text="@string/register"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/boder"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/boder"
            android:layout_margin="10dp"
            android:hint="@string/mane" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/boder"
            android:hint="@string/phone" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/boder"
            android:hint="@string/password" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/boder"
            android:hint="@string/repass" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:hint="@string/register" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"/>
</LinearLayout>