<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity=""
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">




    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/thanhpho" />

        <Spinner
            android:id="@+id/spnThanhPho"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/boder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/quanhuyen" />

        <Spinner
            android:id="@+id/spnQuanHuyen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/boder"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/xaphuong" />

        <Spinner
            android:id="@+id/spnXaPhuong"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/boder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/sonha" />

        <Spinner
            android:id="@+id/spnSoNha"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/boder"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:hint="@string/luuy" />

        <Button
            android:id="@+id/choosefrommap"
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/deepskyblue"
            android:text="@string/formmap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


    </LinearLayout>
</LinearLayout>