<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" android:text="@string/quaylai"
        android:autoLink="web" android:id="@+id/quaylai"
        android:textStyle="bold"
        android:textColor="@color/deepskyblue"
        android:textSize="20sp"
        android:layout_marginLeft="30sp"
        android:layout_centerInParent="true"
        android:linksClickable="true"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" android:text="@string/dangtin"
        android:autoLink="web" android:id="@+id/danngtin"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/deepskyblue"
        android:textSize="20sp"
        android:linksClickable="true"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" android:text="@string/tieptheo"
        android:autoLink="web" android:id="@+id/tieptheo"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/deepskyblue"
        android:textSize="20sp"
        android:linksClickable="true"/>
</LinearLayout>