<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">



        <ImageView
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:textColor="@color/deepskyblue"
            android:gravity="center"
            android:text="@string/tk"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"

        android:orientation="vertical">

        <ImageView
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/mane"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Email"
            android:textColor="@color/deepskyblue"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/Sodt"
            android:textColor="@color/deepskyblue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Đăng xuất"
            android:textColor="@color/red"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"/>
</LinearLayout>