<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".OtpNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"

        android:orientation="vertical">

        <ImageView
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:padding="20dp"
            android:id="@+id/otp"
            android:text="@string/OTP"
            android:textSize="20sp" />
        <Button
            android:id="@+id/verify_OTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/VeryOTP"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textAlignment="center"

            ></Button>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <TextView
            android:id="@+id/otpagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/Fail"
            android:textAlignment="center"
            ></TextView>
    </LinearLayout>


</LinearLayout>